multicluster-gke/multicluster-vms/productcatalog-gke/virtualservice-baseline-cluster2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productcatalogservice
spec:
  hosts:
    - productcatalogservice
  http:
  - route:
    - destination:
        host: productcatalogservice
      weight: 100
    - destination:
        host: productcatalogservice-gke
      weight: 0
