multicluster-gke/multicluster-vms/productcatalog-gke/vs-80-20-cluster2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productcatalogservice
spec:
  hosts:
    - productcatalogservice
  http:
  - route:
    - destination:
        host: productcatalogservice
      weight: 80
    - destination:
        host: productcatalogservice-gke.default.svc.cluster.local
      weight: 20
